--- a/src/style.css
+++ b/src/style.css
@@ -1,38 +1,54 @@
-body {
-    background-color: #344245;
+html {
+    background: url(images/dgb.jpeg) no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
 }
+
+@font-face {
+    font-family: TitleFont;
+    src: url(Fonts/PermanentMarker-Regular.ttf);
+}
+
+@font-face {
+    font-family: Saira;
+    src: url(Fonts/SairaCondensed-ExtraLight.ttf);
+}
+
 div.title{
     display: inline-block;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 80px;
+    /*font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
+    font-family: TitleFont;
+    font-size: 30px;
 }
 #title1{
     position: fixed;
-    color: #800020;
+    color: #3c89a2;
     top: -35px;
 }
 #title2{
     position: fixed;
-    color: rgb(230, 180, 35);
+    color: #3c89a2;
     top: 50px;
 }
 #title3{
     position: fixed;
-    color: gray;
+    color: #3c89a2;
     top: 125px;
 }
 div.angle {
     display: inline-block;
     position: fixed;
     left:550px;
-    top:20px;
+    top:80px;
     text-align: center;
+    filter: invert(75%) sepia(30%) saturate(753%) hue-rotate(115deg) brightness(85%) contrast(89%);
 }
 div.balanced {
     display: inline-block;
     position: fixed;
-    left: 1000px;
-    top: 20px;
+    left: 1042px;
+    top: 255px;
     text-align: center;
     color: black;
     /*filter: invert(75%) sepia(30%) saturate(753%) hue-rotate(115deg) brightness(85%) contrast(89%);*/
@@ -43,10 +59,12 @@ div.balanced {
 }
 #driveMode {
     position: fixed;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /*font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
+    font-family: Saira;
     font-size: 15pt;
-    left: 300px;
-    top: 250px;
+    left: 50px;
+    top: 300px;
+    color: rgb(218, 238, 255);
 }
 div.flywheel {
     display: inline-block;
@@ -58,34 +76,127 @@ div.flywheel {
 #flywheelRPM {
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 40pt;
+    color: rgb(218, 238, 255);
 }
 #matchTime {
     position: fixed;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    /*font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;*/
+    font-family: Saira;
     font-size: 30pt;
-    top: 15px;
-    left: 300px;
+    top: 65px;
+    left: 50px;
+    color: rgb(218, 238, 255);
 }
 #timer {
     position: fixed;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 80pt;
-    top: 0px;
-    left: 300px;
+    top: 50px;
+    left: 50px;
+    /*color: rgb(218, 238, 255);*/
+    color: rgb(255, 159, 80);
+    /*color: crimson;*/
 }
 
 #matchPhase {
     position: fixed;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /*font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
+    font-family: Saira;
     font-size: 20pt;
-    top: 205px;
-    left: 300px;
+    top: 255px;
+    left: 50px;
+    color: rgb(218, 238, 255);
 }
 
 #ticks {
     position: fixed;
     text-align: center;
     font-size: 20px;
-    left: 1200px;
-    top: 375px;
+    left: 1250px;
+    top: 400px;
+    color: rgb(70, 71, 71);
+}
+
+#rectangle{
+    position:fixed;
+    left: 1000px;
+    top: 0px;
+    width:400px;
+    height:500px;
+    color: #fff;
+    background-color: rgba(0,0,0,.35);
+}
+
+#apriltag1 {
+    display:inline-flex;
+    position:fixed;
+    left:1040px;
+    top:40px;
+}
+
+#apriltagpic {
+    display: inline-block;
+    position:fixed;
+    left:1125px;
+    top:215px;
+    color: rgb(218, 238, 255);
+    font-family: Saira;
+    font-size: 20pt;
+}
+
+#arrow1 {
+    display: inline-block;
+    position:fixed;
+    left:770px;
+    top:130px;
+    /*filter: invert(80%) sepia(99%) saturate(1399%) hue-rotate(184deg) brightness(458%) contrast(103%);*/
+    color: aliceblue;
+}
+
+#arrow2 {
+    display: inline-block;
+    position:fixed;
+    left:770px;
+    top:180px;
+    /*filter: invert(80%) sepia(99%) saturate(1399%) hue-rotate(184deg) brightness(458%) contrast(103%);*/
+    color: aliceblue;
+}
+
+#arrow3 {
+    display: inline-block;
+    position:fixed;
+    left:770px;
+    top:230px;
+    /*filter: invert(80%) sepia(99%) saturate(1399%) hue-rotate(184deg) brightness(458%) contrast(103%);*/
+    color: aliceblue;
+}
+
+#auto-select {
+    display: inline-block;
+    position:fixed;
+    left:810px;
+    top:95px;
+    color: aliceblue;
+    font-family: Saira;
+    font-size: 20pt;
+}
+
+#speed {
+    display: inline-block;
+    position:fixed;
+    left:810px;
+    top:145px;
+    color: aliceblue;
+    font-family: Saira;
+    font-size: 20pt;
+}
+
+#arm-length {
+    display: inline-block;
+    position:fixed;
+    left:810px;
+    top:190px;
+    color: aliceblue;
+    font-family: Saira;
+    font-size: 20pt;
 }
