--- a/src/style.css
+++ b/src/style.css
@@ -20,17 +20,20 @@ html {
     src: url(Fonts/LexendDeca-VariableFont_wght.ttf);
 }
 
+@font-face {
+    font-family: Electrolize;
+    src: url(Fonts/Electrolize-Regular.ttf);
+}
+
 div.title{
     display: inline-block;
-    /*font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
-    /*font-family: TitleFont;*/
-    font-family: Lexand;
+    font-family: Electrolize;
     font-size: 40px;
 }
 #title1{
     position: fixed;
     color: #3c89a2;
-    top: -35px;
+    top: -25px;
     left: 20px;
 }
 #title2{
@@ -66,7 +69,6 @@ div.balanced {
 }
 #driveMode {
     position: fixed;
-    /*font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
     font-family: Saira;
     font-size: 15pt;
     left: 50px;
@@ -87,7 +89,6 @@ div.flywheel {
 }
 #matchTime {
     position: fixed;
-    /*font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;*/
     font-family: Saira;
     font-size: 30pt;
     top: 65px;
@@ -100,14 +101,11 @@ div.flywheel {
     font-size: 80pt;
     top: 50px;
     left: 50px;
-    color: rgb(218, 238, 255);
-    /*color: rgb(255, 159, 80);*/
-    /*color: crimson;*/
+    color: rgb(255, 120, 57);
 }
 
 #matchPhase {
     position: fixed;
-    /*font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
     font-family: Saira;
     font-size: 20pt;
     top: 255px;
@@ -151,27 +149,6 @@ div.flywheel {
     font-size: 20pt;
 }
 
-/* .button {
-    background-color: rgba(0,0,0,0);
-    border: 0 none;
-    background:url(./images/dropdownArrow.png) no-repeat;
-    padding: 15px, 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    outline: 0 none;
-}
-
-button:active {
-    background:url(./images/dropdownArrow.png) no-repeat;
-    outline: 0 none;
-    border: 0 none;
-    
-} */
-
 div.arrow1 {
     display: inline-block;
     position:fixed;
@@ -180,7 +157,6 @@ div.arrow1 {
     border: 0 none;
     outline: 0 none;
     /*filter: invert(80%) sepia(99%) saturate(1399%) hue-rotate(184deg) brightness(458%) contrast(103%);*/
-    /* color: aliceblue; */
     background-color: rgba(0,0,0,0);
 }
 
@@ -189,7 +165,6 @@ div.arrow1 {
     position:fixed;
     left:770px;
     top:205px;
-    /*filter: invert(80%) sepia(99%) saturate(1399%) hue-rotate(184deg) brightness(458%) contrast(103%);*/
     color: aliceblue;
 }
 
@@ -198,7 +173,6 @@ div.arrow1 {
     position:fixed;
     left:770px;
     top:280px;
-    /*filter: invert(80%) sepia(99%) saturate(1399%) hue-rotate(184deg) brightness(458%) contrast(103%);*/
     color: aliceblue;
 }
 
@@ -231,8 +205,8 @@ div.arrow1 {
     position:fixed;
     left:775px;
     top:207px;
-    color: crimson;
-    font-family: Lexand;
+    color: rgb(255, 120, 57);
+    font-family: Saira;
     font-size: 20pt;
 }
 
@@ -246,16 +220,24 @@ div.arrow1 {
     font-size: 20pt;
 }
 
-/* Dropdown Button */
-/*.dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }*/
-  
-  /* The container <div> - needed to position the dropdown content */
+#armvalue {
+    display: inline-block;
+    position:fixed;
+    left:775px;
+    top:280px;
+    color: rgb(255, 120, 57);
+    font-family: Saira;
+    font-size: 20pt;
+}
+
+#fish {
+    display: inline-block;
+    position:fixed;
+    left:7px;
+    top:380px;
+    color: aliceblue;
+}
+
 div.dropdown {
     position: relative;
     display: inline;
@@ -273,27 +255,13 @@ div.dropdown-content {
     z-index: 1;
 }
 
-#auto {
-    position: relative;
-
+#autos {
+  display: absolute;
+  position: absolute;
+  background-color: #d2c1c100;
+  font-family: Saira;
+  color:rgb(218, 238, 255);
+  min-width: 120px;
+  left: 10px;
+  top: 35px;
 }
-
-  /* Dropdown Content (Hidden by Default) */
-  
-  /* Links inside the dropdown */
-  div.dropdown-content a {
-    color: aliceblue;
-    padding: 12px 16px;
-    font-family: Saira;
-    text-decoration: none;
-    display: block;
-}
-  
-  /* Change color of dropdown links on hover */
-div.dropdown-content a:hover {background-color: black;}
-  
-  /* Show the dropdown menu on hover */
-div.arrow1:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-div.dropdown:hover .dropbtn {background-color: #3e8e41;}
