--- a/src/style.css
+++ b/src/style.css
@@ -249,7 +249,8 @@ div.dropdown {
 div.dropdown-content {
     display: none;
     position: absolute;
-    background-color: rgba(0,0,0,.35);;
+    background-color: rgba(0,0,0,.35);
+    background: black;  
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -260,7 +261,8 @@ div.dropdown-content {
   position: absolute;
   background-color: #d2c1c100;
   font-family: Saira;
-  color:rgb(218, 238, 255);
+  color: rgb(255, 120, 57);
+  background-color: (0,0,0,.35);
   min-width: 120px;
   left: 10px;
   top: 35px;
